# Geometry

./: .clang-format  .clang-tidy  .cmake-format  CMakeLists.txt  LICENSE  README.md
Geometry/: Geometry.h  Point.h  Segment.h
GeometryTests/Point/: CMakeLists.txt  PointUnitTests.cpp
GeometryTests/Segment/: CMakeLists.txt  SegmentUnitTests.cpp
